Add openapi generation
